# quersumme

./: pyproject.toml  quersumme.ipynb  shell.nix
.ipynb_checkpoints/: quersumme-checkpoint.ipynb
data/: paarsumme.csv
tests/: test_quersumme.py
