[tool.poetry]
name = "quersumme"
version = "0.1.0"
description = ""
authors = ["Romeo Disca <romeo.disca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
moment = "^0.12.1"
arrow = "^1.2.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
